@@ -8,7 +8,6 @@ use fr_core::TD_BASE;
 #[test]
 fn test_extract_icon_fromrome() {
     setup();
-    // let f = "../fr_core/tests/data/fromrome.html";
     let filename = format!("{}websites/fromrome.html", TD_BASE);
     let page = std::fs::read_to_string(filename).unwrap();
     let r = extract_icon_from_homepage(page, &"https://www.fromrome.info/".to_string());
@@ -22,7 +21,6 @@ fn test_extract_icon_fromrome() {
 #[test]
 fn test_extract_icon_seoul() {
     setup();
-    // let f = "../fr_core/tests/data/www.seoulnews.net.html";
     let filename = format!("{}websites/www.seoulnews.net.html", TD_BASE);
     let page = std::fs::read_to_string(filename).unwrap();
     let r = extract_icon_from_homepage(page, &String::default());
@@ -36,7 +34,6 @@ fn test_extract_icon_seoul() {
 #[test]
 fn test_extract_icon_terrahertz() {
     setup();
-    // let f = "../fr_core/tests/data/terraherz_wpstaging.html";
     let filename = format!("{}websites/terraherz_wpstaging.html", TD_BASE);
     let page = std::fs::read_to_string(filename).unwrap();
     let r = extract_icon_from_homepage(page, &String::default());
@@ -53,7 +50,6 @@ fn test_extract_icon_terrahertz() {
 #[test]
 fn test_extract_icon_relay_rd() {
     setup();
-    // let f = "../fr_core/tests/data/relay_rd.html";
     let filename = format!("{}websites/relay_rd.html", TD_BASE);
     let page = std::fs::read_to_string(filename).unwrap();
     let r = extract_icon_from_homepage(page, &"https://www.relay.fm/rd".to_string());
