@@ -38,7 +38,7 @@ de:
   CM_MSG_COPY_LINK_CLIPBOARD: Verweis in Zwischenablage kopieren
 
   D_BUTTON_YES: Ja
-  D_BUTTON_NO: No
+  D_BUTTON_NO: Nein
   D_BUTTON_OK: Ok
   D_BUTTON_CANCEL: Abbrechen
   D_NEW_FOLDER_TITLE: Neuen Ordner anlegen
